force-app/main/default/objects/smagicinteract__Consent_Audit_History__c/smagicinteract__Consent_Audit_History__c.object-meta.xml
<CustomObject>
    <label>Consent Audit History</label>
    <nameField>
        <label>Mobile No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consent Audit History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>