force-app/main/default/objects/smagicinteract__Consent_Audit_History__c/fields/smagicinteract__Consent__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Consent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consent</label>
    <referenceTo>smagicinteract__Consent__c</referenceTo>
    <relationshipLabel>Consent Audit History</relationshipLabel>
    <relationshipName>Consent_Audit_History</relationshipName>
    <type>Lookup</type>
</CustomField>