force-app/main/default/objects/smagicinteract__Consent_Audit_History__c/fields/smagicinteract__Field__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Field__c</fullName>
    <label>Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>