force-app/main/default/objects/smagicinteract__Consent_Audit_History__c/fields/smagicinteract__Modified_By__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Consent_Audit_History</relationshipName>
    <type>Lookup</type>
</CustomField>