force-app/main/default/objects/smagicinteract__Consent_Audit_History__c/fields/smagicinteract__New_Value__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__New_Value__c</fullName>
    <label>New Value</label>
    <length>5100</length>
    <type>LongTextArea</type>
</CustomField>