force-app/main/default/objects/smagicinteract__Consent_Audit_History__c/fields/smagicinteract__Old_Value__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Old_Value__c</fullName>
    <label>Old Value</label>
    <length>5100</length>
    <type>LongTextArea</type>
</CustomField>