force-app/main/default/objects/smagicinteract__Consent_Audit_History__c/fields/smagicinteract__Transactional_Key__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Transactional_Key__c</fullName>
    <description>Used to club the records for which values are changed in single transaction.</description>
    <label>Transactional Key</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>